tests/golden/errors/unknown_name.stderr
error[name]: unknown name `mystery`
  --> unknown_name.kso:1:9
   1 | print "{mystery}"
               ^
